# ChangeLog for sys-libs/slang
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.41 2005/05/16 14:51:33 lanius Exp $

*slang-1.4.9-r2 (16 May 2005)

  16 May 2005; Heinrich Wendel <lanius@gentoo.org>
  +files/slang-utf8-fix2.patch, +slang-1.4.9-r2.ebuild:
  add another utf8 fix from fedora, bug #92735

  03 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  07 Nov 2004; Mamoru KOMACHI <usata@gentoo.org> slang-1.4.9-r1.ebuild:
  Fixed chmod failure when unicode USE flag is set; bug #70328.

  06 Nov 2004; Mamoru KOMACHI <usata@gentoo.org>
  files/slang-1.4.9-fsuid.patch, files/slang-1.4.9.patch,
  slang-1.4.9-r1.ebuild:
  Added a patch to remove glibc specific calls. Thanks to Peter S. Mazinger
  <ps.m@gmx.net>; bug #67666. Fixed compilation on ppc-macos and LICENSE
  syntax.

  26 Oct 2004; Tom Martin <slarti@gentoo.org> slang-1.4.9-r1.ebuild:
  Stable on amd64.

  16 Oct 2004; <gongloo@gentoo.org> slang-1.4.9-r1.ebuild:
  Keyworded ~ppc-macos.

  06 Oct 2004; Guy Martin <gmsoft@gentoo.org> slang-1.4.9-r1.ebuild:
  Stable on hppa.

  30 Sep 2004; Bryan Østergaard,,, <kloeri@gentoo.org> slang-1.4.9-r1.ebuild:
  Stable on alpha.

  25 Sep 2004; Joshua Kinard <kumba@gentoo.org> slang-1.4.9-r1.ebuild:
  Marked stable on mips.

  22 Sep 2004; Gustavo Zacarias <gustavoz@gentoo.org> slang-1.4.9-r1.ebuild:
  Stable on sparc

  21 Sep 2004; Heinrich Wendel <lanius@gentoo.org> slang-1.4.9-r1.ebuild:
  mark slang-1.4.9-r1 stable on x86

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> slang-1.4.9.ebuild:
  Masked slang-1.4.9.ebuild stable for ppc

  01 Sep 2004; Travis Tilley <lv@gentoo.org> slang-1.4.9-r1.ebuild,
  slang-1.4.9.ebuild:
  made slang use $(get_libdir) for cleanly installing to lib64/lib32

  23 Jul 2004; Mamoru KOMACHI <usata@gentoo.org> slang-1.4.9.ebuild:
  Added to macos.

*slang-1.4.9-r1 (07 Jun 2004)
