@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/slang
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.41 2005/05/16 14:51:33 lanius Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.42 2006/02/16 19:48:57 liquidx Exp $
+
+  16 Feb 2006; Alastair Tse <liquidx@gentoo.org> slang-1.4.9-r2.ebuild:
+  workaround build problems for LANG=et_EE (#122713)
 
 *slang-1.4.9-r2 (16 May 2005)
 
